16549
```scala
@tailrec
def a(b:Boolean) {
  try {
    if (b) {
      throw new Exception
    }
  } catch {
    case _ =>
      a(!b)
  }
}
```

I got error:
```scala
<console>:9: error: could not optimize @tailrec annotated method a: it contains a recursive call not in tail position
       def a(b:Boolean) {
           ^
```
